Fix: change letter-spacing in lmk div

--- a/Practice/style.css
+++ b/Practice/style.css
@@ -285,3 +285,119 @@ section.story div.story__content-right div.nextpage-button img {
   width: 40px;
   height: 40px;
 }
+
+section.experience {
+  margin-top: 6rem;
+  position: relative;
+}
+
+section.experience div.experience__text {
+  position: absolute;
+  top: 18rem;
+  left: 5rem;
+  color: var(--color-white);
+
+}
+
+section.experience span.experience__text-start {
+  font-size: 7rem;
+  margin-right: 0rem;
+  letter-spacing: -9px;
+}
+
+section.experience span.experience__text-end {
+  font-size: 7rem;
+  margin-left: 13rem;
+  letter-spacing: -9px;
+}
+
+section.experience div.experience__button {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 7rem;
+  gap: 2rem;
+}
+
+.experience__button-content {
+  display: flex;
+  justify-content: space-around;
+  background: transparent;
+  border-radius: 10rem;
+  backdrop-filter: blur(10px);
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border: var(--color-gray-tertiary) solid 1px;
+}
+
+section.experience div.experience__button-content p {
+  color: var(--color-white);
+  font-size: 3rem;
+  letter-spacing: -2px;
+}
+
+section.experience div.experience__button-content img {
+  width: 30px;
+}
+
+section.experience div.experience-image {
+  width: 100%;
+  
+}
+
+section.experience div.experience-image img {
+  object-fit: fill;
+  width: 100%;
+}
+
+section.services {
+  margin-top: 5rem;
+  border-top: var(--color-gray-secondary) solid 1px;
+}
+
+section.services div.services__text {
+  margin-top: 1rem;
+  font-size: 1rem;
+  color: var(--color-white);
+  letter-spacing: -1px;
+  display: flex;
+}
+
+section.services div.services__text span {
+  white-space: nowrap;
+  font-weight: 300;
+  color: var(--color-gray-secondary);
+}
+
+section.services div.services__text h3 {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  color: var(--color-gray-secondary);
+  font-weight: 300;
+}
+
+section.services div.services__content {
+  display: flex;
+  gap: 1rem;
+  margin-top: 7rem;
+}
+
+section.services div.services__content div.lmk {
+  align-self: flex-end;
+  color: var(--color-white);
+  width: 25vw;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 300;
+  font-size: 1.2rem;
+  letter-spacing: -0.0375em;
+}
+
+section.services div.services__content div.skill {
+  color: var(--color-white);
+  font-size: 5rem;
+  line-height: 5rem;
+  letter-spacing: -9px;
+}
